# OpenCL

./: CMakeLists.txt  README.md
Conway_Game_of_Life/: CMakeLists.txt  base.cl  base.cpp
Conway_Game_of_Life/OpenCL-ICD-Loader/: Makefile  cmake_install.cmake
Parallel_closest_pair_of_points/: base.cl  base.cpp
Parallel_scan/: base.cl  base.cpp
TD1/: base.cl  base.cpp
